config: install dependencies project

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,9 @@
     "jsx": "react-jsx",
     "strict": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "types": ["node"]
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["**/__tests__/*","node_modules"]
 }
